tests/pass/bool.us
type True = true;

type False = false;

fn main() {
    if False {
        print("Not here");
    }
    
    if True {
        print("true");
    }
}