tests/fail/index.us
fn main() {
    let a = 10;
    a[10];  // Expect : Cannot index type `i32`
}